--- a/dashboard_style.css
+++ b/dashboard_style.css
@@ -99,13 +99,14 @@ body{
 }
 
 .content {
-    margin-top: 15px;
+    margin: 30px 15px 15px 15px;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    gap: 15px;
 }
 
 .projects{
-    margin: 15px;
+    /* margin: 15px; */
     display: grid;
     grid-template-rows: repeat(2, max-content);
     gap: 15px;
@@ -115,7 +116,7 @@ body{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     /* if you want to keep the size of the cards fixes, use repeat(auto-fill, 200px) */
-    gap: 10px;
+    gap: 15px;
 }
 
 .heading{
@@ -124,7 +125,7 @@ body{
 }
 
 .project-card{
-    padding: 10px;
+    padding: 20px;
     background-color: white;
     border-radius: 5px;
     border-left: orange;
@@ -143,6 +144,7 @@ body{
 .project-description{
     font-size: 14px;
     padding: 5px 0px;
+    color: rgb(79, 79, 79);
 }
 
 .mgmt{
@@ -158,6 +160,38 @@ body{
 
 .news{
     display: grid;
-    grid-template-rows: repeat(3, max-content);
-    gap: 3vh;
+    grid-template-rows: repeat(2, max-content);
+    gap: 30px;
+}
+
+.announcements, .trending{
+    display: grid;
+    gap: 15px;
+}
+
+.messages, .users{
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px 20px 20px 20px;
+    display: grid;
+    font-size: 12px;
+    color: rgb(79, 79, 79);
+}
+
+.title {
+    font-size: 12px;
+    font-weight: bold;
+    padding-top: 10px;
+    color: black;
+}
+
+.message{
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: rgb(183, 183, 183);
+    padding-bottom: 10px;
+}
+
+.message:last-child {
+    border-style: none;
 }
