--- a/dashboard_style.css
+++ b/dashboard_style.css
@@ -30,7 +30,14 @@ body{
     border-style: solid;
     border-width: 1px;
     display: grid;
+    grid-template-columns: max-content 1fr;
     gap: 2vh;
+}
+
+img{
+    grid-column: 1/2;
+    width: 16px;
+    height: 16px;
 }
 
 .header{
@@ -194,4 +201,19 @@ body{
 
 .message:last-child {
     border-style: none;
+}
+
+.users img{
+    width: 42px;
+    height: 42px;
+    background-color: rgb(254, 200, 126);
+    border-radius: 50%;
+}
+
+.users{
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    gap: 15px;
+    align-items: center;
 }
